--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,11 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i&display=swap" rel="stylesheet">
+    
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -22,12 +24,58 @@
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
-      <span class="header">Tweeter</span>
+      <div class="header">
+        <div class="header" style="
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+">
+        <img class="logo" src="/images/bird.png">
+        <span style="
+    /* line-height: 80px; */
+    /* display: inline-block; */
+    margin-left: 10px;
+">Tweeter</span>
+<span style="
+    margin-left: auto;
+">username</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <p>***</p>
+      <p>***</p> <p>***</p> <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p><p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
+      <p>***</p>
     </main>
 
   </body>
