--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,14 @@
     </nav>
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
+    <main class="container"<section class="new-tweet">
+      <h2>Compose Tweet</h2>
+      <form>
+        <textarea name="text" placeholder="What are you humming about?"></textarea>
+        <input type="submit" value="Tweet">
+        <span class="counter">140</span>
+      </form>
+    </section>>
       <p>***</p>
       <p>***</p> <p>***</p> <p>***</p>
       <p>***</p>
