--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,10 @@
     </nav>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"<section class="new-tweet">
+    <main class="container"
+    <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form>
+      <form method="POST" action="/tweets">
         <textarea name="text" placeholder="What are you humming about?"></textarea>
         <input type="submit" value="Tweet">
         <span class="counter">140</span>
