create createTweetElement function

--- a/public/index.html
+++ b/public/index.html
@@ -71,9 +71,11 @@
                   @bob
                 </h3>
             </header>
-              <p>Little tweet here</p>
+              <main>
+                <p>Little tweet here</p>
+              </main>
             <footer class="border">
-                <p class="nomargin">Ten days ago</p>
+                <p class="nomargin">Ten days ago</p> 
             </footer>
         </article>
     </section>
