create compose button

--- a/public/index.html
+++ b/public/index.html
@@ -16,21 +16,6 @@
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
-    <!-- EXAMPLE--- REMOVE AFTER -->
-    <!-- <script>
-        $(function() {
-          var $button = $('#load-more-posts');
-          $button.on('click', function () {
-            console.log('Button clicked, performing ajax call...');
-            $.ajax('more-posts.html', { method: 'GET' })
-            .then(function (morePostsHtml) {
-              console.log('Success: ', morePostsHtml);
-              $button.replaceWith(morePostsHtml);
-            });
-          });
-        });
-        </script> --> 
-
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
@@ -52,6 +37,7 @@
     /* display: inline-block; */
     margin-left: 10px;
 ">Tweeter</span>
+<button class='styled-button'type='button'>Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
