add display style none, so I do not see new Tweet box when I load the page

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <!-- New Tweet Section -->
-    <section class="new-tweet">
+    <section class="new-tweet" style="display: none">
       <article class = "background">
         <header>
           <h2>Compose Tweet</h2>
