--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,13 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <!-- New Tweet Section -->
-    <section class="new-tweet" style="display: none">
+    <section class="new-tweet">
       <article class = "background">
         <header>
           <h2>Compose Tweet</h2>
         </header>
           <form id="tweetform" method="POST" action="/tweets/">
-            <textarea name="text" placeholder="What are you humming about?"></textarea>
+            <textarea id="area" name="text" placeholder="What are you humming about?"></textarea>
             <footer>
               <input type="submit" value="Tweet">
               <span class="counter">140</span>
@@ -62,22 +62,6 @@
       <section id="Tweet-List">
       
     </section>
-
-    <!-- To see how form looks like when scrolling down -->
-      <p>***</p> <p>***</p> <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
-      <p>***</p>
     </main>
 
   </body>
