--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
           <form id="tweetform" method="POST" action="/tweets/">
             <textarea id="area" class="textarea" name="text" placeholder="What are you humming about?"></textarea>
             <footer>
-              <p>Text should be between 1-140 characters.</p>
+              <p id="errormessage" class="hiddenError">Text should be between 1-140 characters.</p>
               <input type="submit" value="Tweet">
               <span class="counter">140</span>
             </footer>
